syntax = "proto3";
package AuctionWar;

message CancelCombatMatch
{
	
}