syntax = "proto3";
package AuctionWar;

message CombatMatchRes
{
	uint32 roomId = 1;
}